<resources>
    <string name="app_name">Mobile Assignment 2</string>
    <string name="kz_app_title">Tip Calculator</string>
    <string name="kz_input_hint">Enter bill amount</string>
    <string name="kz_iv_cash_desc">Image of cash</string>
    <string name="kz_button_10_str">10%</string>
    <string name="kz_button_15_str">15%</string>
    <string name="kz_button_20_str">20%</string>
</resources>