<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/kz_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kz_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:padding="33dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#3185FB"/>

    <ImageView
        android:id="@+id/kz_iv_cash"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cash_money"
        android:contentDescription="@string/kz_iv_cash_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kz_app_title" />

    <EditText
        android:id="@+id/kz_input_amount"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kz_iv_cash"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:layout_margin="10dp"
        android:hint="@string/kz_input_hint"
        android:gravity="center"
        android:textSize="20sp"
        android:textColorHint="#938D8D"/>

    <Button
        android:id="@+id/kz_button_10"
        android:layout_width="222dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kz_input_amount"
        android:text="@string/kz_button_10_str"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="#313BFB"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/kz_button_15"
        android:layout_width="222dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kz_button_10"
        android:text="@string/kz_button_15_str"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="#8531FB"
        android:layout_margin="12dp"/>

    <Button
        android:id="@+id/kz_button_20"
        android:layout_width="222dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kz_button_15"
        android:text="@string/kz_button_20_str"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="#DD31FB"
        android:layout_margin="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>